<resources>
    <string name="app_name">MadarSoft Task</string>
    <string name="enter_data">Please Enter User Data</string>
    <string name="user_data">User Data</string>
    <string name="user_name">name</string>
    <string name="user_age">age</string>
    <string name="user_job_title">job title</string>
    <string name="user_gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="save">Save</string>
    <string name="display">Display</string>
    <string name="displayAll">Display All</string>
    <string name="deleteAll">Delete All</string>
    <string name="userAdded">User Added Successfully</string>
    <string name="insertCorrectValues">Please Enter Valid Data ..!</string>
    <string name="alert_title">Title</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirmationTitle">Are you sure ?</string>
    <string name="willBeDeleted">users will be deleted</string>
    <string name="userDeleted">User Deleted Successfully</string>
    <string name="usersDeleted">All Users Deleted Successfully</string>
    <string name="error">Error</string>
    <string name="noData">There is no users !</string>
    <string name="undo">undo</string>
</resources>