<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataCollectionActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_margin="32dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/major"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_texts_shapes"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterData"
        android:hint="@string/user_name"
        android:elevation="2dp"
        />

    <EditText
        android:id="@+id/userAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_texts_shapes"
        android:inputType="number"
        android:maxLength="3"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:hint="@string/user_age"
        android:elevation="2dp"
        />

    <EditText
        android:id="@+id/userJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_texts_shapes"
        android:inputType="text"
        android:maxLength="100"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userAge"
        android:hint="@string/user_job_title"
        android:elevation="2dp"
        />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:textColor="@color/major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userJobTitle"
        >
        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_marginRight="45dp"
            android:checked="true"
            android:buttonTint="@color/radioTint"
            />

        <RadioButton
            android:id="@+id/female_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:buttonTint="@color/radioTint"
            />
    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:layout_marginTop="64dp"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:id="@+id/display"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:text="@string/display"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>